Fix: Add libmicrohttpd-dev dependency for armhf build

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -26,7 +26,7 @@ jobs:
           --platform linux/${{ matrix.arch }} \
           debian:bookworm bash -c "
           apt update && 
-          apt install -y build-essential debhelper devscripts &&
+          apt install -y build-essential debhelper devscripts libmicrohttpd-dev &&
           dpkg-buildpackage -us -uc -b"
       
     - name: Upload ${{ matrix.arch }} artifacts
