--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -23,7 +23,7 @@ jobs:
         sudo apt install -y qemu-user-static binfmt-support
         docker run --rm --privileged multiarch/qemu-user-static --reset -p yes
         docker run --rm -v $PWD:/workspace -w /workspace \
-          --platform linux/${{ matrix.arch }} \
+          --platform linux/${{ matrix.arch == 'arm64' && 'aarch64' || matrix.arch }} \
           debian:bookworm bash -c "
           apt update && 
           apt install -y build-essential debhelper devscripts libmicrohttpd-dev &&
