--- a/debian/simple-wifi/DEBIAN/control
+++ b/debian/simple-wifi/DEBIAN/control
@@ -1,5 +1,5 @@
 Package: simple-wifi
-Version: 1.0.0-1
+Version: 1.0.0
 Architecture: arm64
 Maintainer: R. Moeijes <simpelmuis@gmail.com>
 Installed-Size: 116
